--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+/node_modules/*
 /.pnp
 .pnp.js
 
@@ -17,8 +17,6 @@ node_modules
 .env.development.local
 .env.test.local
 .env.production.local
-*.svg
-.png
 
 npm-debug.log*
 yarn-debug.log*
