--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playground",
+  "name": "transaction-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,13 +19,15 @@
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "node-ts": "^6.0.1",
     "nodemon": "^3.0.1",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6",
-    "tsc": "^2.0.4"
+    "tsc": "^2.0.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.18",
+    "@types/express": "^4.17.19",
     "@types/node": "^20.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
