--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/express-jwt": "^7.4.2",
     "@types/multer": "^1.4.8",
     "@types/nodemon": "^1.19.3",
+    "@types/winston": "^2.4.4",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
